[package]
name = "dhcpsniff"
version = "0.1.0"
edition = "2024"
authors = ["Richard Vidal-Dorsch"]
license = "MIT"
description = "A library and CLI tool for sniffing and parsing DHCP (v4 & v6) network traffic"
readme = "README.md"
repository = "https://github.com/rvido/dhcpsniff"
homepage = "https://github.com/rvido/dhcpsniff"
keywords = ["dhcp", "network", "sniffer", "packet", "dhcpv6"]
categories = ["network-programming", "parsing"]

[dependencies]
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
