[package]
name = "dhcpsniff"
version = "0.1.0"
edition = "2024"
authors = ["Richard Vidal-Dorsch"]
license = "MIT"
description = "A library and CLI tool for sniffing and parsing DHCP (v4 & v6) network traffic"
readme = "README.md"
repository = "https://github.com/rvido/dhcpsniff"
homepage = "https://github.com/rvido/dhcpsniff"
keywords = ["dhcp", "network", "sniffer", "packet", "dhcpv6"]
categories = ["network-programming", "parsing"]

[features]
default = ["http-api"]
http-api = ["dep:serde", "dep:serde_json", "dep:tiny_http"]

[dependencies]
pnet = "0.35"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tiny_http = { version = "0.12", optional = true }
