[package]
name = "lanwatch"
version = "0.1.0"
edition = "2024"
authors = ["Richard Vidal-Dorsch"]
license = "MIT"
description = "A library and CLI tool for network device discovery and tracking via DHCP, mDNS, and OUI identification"
readme = "README.md"
repository = "https://github.com/rvido/lanwatch"
homepage = "https://github.com/rvido/lanwatch"
keywords = ["network", "discovery", "dhcp", "mdns", "device-tracking"]
categories = ["network-programming", "parsing"]

[features]
default = ["http-api"]
http-api = ["dep:serde", "dep:serde_json", "dep:tiny_http"]
mdns = []

[dependencies]
pnet = "0.35"
oui-data = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tiny_http = { version = "0.12", optional = true }
